[package]
name = "python"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cute_light"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["experimental-async", "anyhow"] }
cute_lights = { git = "https://github.com/cute-lights/rust-sdk", tag = "v0.2.2"}
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
